I changed all the tests so they fit with our code
